tests/build/fail/widget/invalid_unset3.stderr
error: can only unset inherited property
 --> $DIR/invalid_unset3.rs:8:18
  |
8 |         margin = unset!;
  |                  ^^^^^

warning: unused import: `zero_ui::properties::margin`
 --> $DIR/invalid_unset3.rs:5:9
  |
5 |     use zero_ui::properties::margin;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
